--- a/web1.html
+++ b/web1.html
@@ -11,7 +11,7 @@
       <li><a href="https://unity.com/">unity</a></li> <!-- 유니티 -->
       <li><a href="https://en.wikipedia.org/wiki/C_(programming_language)">c</a></li> <!-- 씨 -->
       <li><a href="https://www.python.org/">python</a></li> <!-- 파이썬 -->
-      <img src="제목 없음.png>
+      <img src="제목 없음.png">
     </ol>
   </body>
 </html>
